# resultsafe

./: $null  .gitattributes  .gitignore  .gitignore_examples  .project-meta.toml  AI_DOC_FRAMEWORK.md  QWEN.md  README.md  TASK_CONTEXT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.aliases.json  tsconfig.json  tsconfig_resolved.json  vitest.config.ts
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md
.qwen/: settings.json  settings.json.orig
__temp__/: docs_rule_violations.txt  final_rule_validation.txt  import-sort.example.ts  normalize-examples-standard.ps1  tmp-1.ts
artifacts/: .gitignore  README.md
docs/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  MANIFEST.md  README.md  ROADMAP.md  RULES.md  TASK-AI-RAG-001.1.md  TASK-AI-RAG-001.2.md  TASK-AI-RAG-001.3.md  TASK-AI-RAG-001.4.md  TASK-AI-RAG-001.5.md  TASK-AI-RAG-001.6.md  TASK-AI-RAG-001.7.md  TASK-AI-RAG-001.md  TASK-AI-RAG-SUMMARY.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
scripts/: add-module-tags.ts  add-utf8-bom.mjs  migrate-since-tags.mjs  setup-python-runtime.ps1  setup-python-runtime.sh
templates/: docs-classification-hygiene-checklist.md  docs-owner-coverage-step5-validation-checklist.md  docs-platform-evidence-validation-checklist.md  docs-platform-live-evidence-generation-procedure.md  docs-platform-live-evidence-report.md  docs-platform-merge-enforcement-evidence-checklist.md  docs-release-preflight-evidence-checklist.md  rag-consistency-report.md  (+1 more)
(+348 files in other folders)
