[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resultsafe-python-monorepo"
version = "0.1.0"
description = "Python monorepo runtime for ResultSafe Rust-principled FP contracts"
readme = "packages/python/README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "hypothesis>=6.120.0",
  "mypy>=1.11.0",
  "pyarrow>=18.0.0",
  "psycopg[binary]>=3.3.0",
]

[tool.setuptools]
package-dir = {"" = "packages/python/src"}

[tool.setuptools.packages.find]
where = ["packages/python/src"]

[tool.pytest.ini_options]
testpaths = [
  "packages/python/tests",
  "tools/automation/tests",
]
pythonpath = [
  "packages/python/src",
  ".",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = [
  "packages/python/src",
  "packages/python/tests",
]
